--- a/estilo/style.css
+++ b/estilo/style.css
@@ -50,6 +50,11 @@ h1 {
     font-family: var(--titulos);
     margin-top: 10px;
     display: inline-block;
+    color: black;
+}
+
+h1:hover {
+    color: var(--vermelho);
 }
 
 .imgLogo {
@@ -57,11 +62,16 @@ h1 {
     margin-top: 10px;
 }
 
+.imgLogo:hover {
+    opacity: 0.5;
+}
+
 button.btnHamburguer, .btnFecharMenu {
     width: 30px;
     font-size: 50px;
     background-color: transparent;
     border: none;
+    cursor: pointer;
 }
 
 button.btnFecharMenu {
@@ -77,6 +87,7 @@ button.btnRecursos {
     text-align: left;
     box-shadow: 0px 1px 5px 1px #00000071;
     border: none;
+    cursor: pointer;
 }
 
 button.btnRecursos p {
@@ -153,7 +164,7 @@ h2 {
 
 .conteudo {
     background-color: white;
-    padding: 10px;
+    padding: 18px;
     border-radius: 7px;
     box-shadow: 0px 1px 5px 1px #0000003d;
 }
@@ -164,10 +175,9 @@ main p {
 
 .imagens {
     margin: 10px 10px 10px 0px;
-    border-radius: 100%;
 }
 
-div.acima {
+div.btnAcima, .btnHome {
     border-radius: 100%;
     padding: 10px;
     width: fit-content;
@@ -175,7 +185,10 @@ div.acima {
     position: fixed;
     right: 5px;
     bottom: 50px;
+}
 
+.btnHome {
+    bottom: 125px;
 }
 
 /* CELULAR LANDSCAPE */
@@ -216,7 +229,7 @@ div.acima {
         max-width: 1140px;
     }
     .containerConteudo {
-        max-width: 1122px;
+        max-width: 800px;
     }
 }
 
