--- a/estilo/main.css
+++ b/estilo/main.css
@@ -112,6 +112,11 @@ nav ul li a {
     color: white;
     text-decoration: none;
 }
+
+.visited > a{
+    color: var(--amarelo);
+}
+
 nav ul li:hover {
     background-color: #555a6131;
 }
@@ -130,10 +135,34 @@ h2 {
     margin: 10px 0px 10px 0px
 }
 
-p {
+.articleIndex {
+    box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.233);
+    width: 50%;
+    margin: 10px;
+}
+.articleIndex > ul {
+    list-style: inside;
+    list-style-type: '✔️';
+    padding: 5px 0px 5px 5px; 
+}
+
+p, h3 {
     margin: 4px 10px 4px 10px;
 }
 
+h3 {
+    font-family: var(--side);
+}
+
+.btnAbove {
+    position: fixed;
+    right: 10px;
+    bottom: 10px;
+    box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.233);
+    border-radius: 50%;
+    font-size: 40px;
+    color: black;
+}
 
 /* CELULAR LANDSCAPE */
 
@@ -195,6 +224,7 @@ p {
         display: inline;
         margin-left: 10px;
     }
+
 }
 
 /* PC */
