--- a/estilo/main.css
+++ b/estilo/main.css
@@ -4,13 +4,15 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,500;1,100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;1,300;1,400&display=swap');
 
 /* VARIÁVEIS */
 
 :root {
-    --main: Roboto;
+    --main: Lato;
     --side: Arial;
     --title: Montserrat;
+    --titles: Roboto;
     --vermelho: #F2380F;
     --branco: #E9F2F1;
     --cinza-claro: #2d3540de;
@@ -78,16 +80,16 @@ nav {
     transition: height 0.5s;
     overflow: hidden;
     width: 100%;
-    background-image: linear-gradient(-86deg, #2D3540, #3c4147);
+    background-image: linear-gradient(-180deg, #2D3540, #474b50);
     background-color: #2D3540;
-    box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.233);;
+    box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.233);;
     color: white;
     font-family: var(--side);
     
 }
 
 nav ul {
-    margin-top: 20px;
+    margin: 20px 10px 0px 10px;
     list-style: none;
     columns: 2;
 }
@@ -101,11 +103,11 @@ nav p {
 
 nav ul li {
     text-align: left;
-    margin-left: 10px;
     border-radius: 10px;
     background-color: var(--cinza-claro);
     padding: 5px;
     margin-bottom: 10px;
+    width: fit-content;
 }
 
 nav ul li a {
@@ -127,11 +129,13 @@ nav ul li:hover > a{
 
 main {
     font-family: var(--main);
+    font-size: 18px;
 }
 
 h2 {
     text-indent: 5px;
-    font-family: var(--title);
+    font-family: var(--titles);
+    font-weight: 500;
     margin: 10px 0px 10px 0px
 }
 
@@ -139,6 +143,7 @@ h2 {
     box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.233);
     width: 50%;
     margin: 10px;
+    font-family: var(--side);
 }
 .articleIndex > ul {
     list-style: inside;
@@ -147,11 +152,12 @@ h2 {
 }
 
 p, h3 {
-    margin: 4px 10px 4px 10px;
+    margin: 10px 10px 4px 10px;
 }
 
 h3 {
-    font-family: var(--side);
+    font-family: var(--titles);
+    font-weight: 500;
 }
 
 .btnAbove {
