--- a/estilo/main.css
+++ b/estilo/main.css
@@ -136,28 +136,58 @@ h2 {
     text-indent: 5px;
     font-family: var(--titles);
     font-weight: 500;
-    margin: 10px 0px 10px 0px
+    margin: 10px 0px 10px 0px;
 }
 
 .articleIndex {
     box-shadow: 0px 0px 10px -3px rgba(0, 0, 0, 0.233);
-    width: 50%;
     margin: 10px;
     font-family: var(--side);
 }
+
 .articleIndex > ul {
     list-style: inside;
     list-style-type: '✔️';
     padding: 5px 0px 5px 5px; 
+    margin-left: 5px;
 }
 
-p, h3 {
+.articleIndex > ul li {
+    background-color: white;
+    margin-top: 5px;
+}
+
+main p, h3 {
     margin: 10px 10px 4px 10px;
+}
+
+main p {
+    text-indent: 5px;
 }
 
 h3 {
     font-family: var(--titles);
     font-weight: 500;
+}
+
+h3::before {
+    content: '✔️';
+}
+
+main ul {
+    list-style: inside;
+    list-style-type: '💡';
+    margin-left: 15px;
+    border-left: 1px solid var(--amarelo);
+    padding: 5px;
+}
+
+main ul li {
+    font-family: var(--side);
+    margin-top: 10px;
+    width: 50%;
+    background-color: var(--amarelo);
+    border-radius: 5px;
 }
 
 .btnAbove {
