--- a/estilo/main.css
+++ b/estilo/main.css
@@ -159,6 +159,10 @@ h2 {
     margin-top: 5px;
 }
 
+.articleIndex > ul > li > a {
+    color: black;
+}
+
 main p, h3 {
     margin: 10px 10px 4px 10px;
 }
@@ -197,6 +201,10 @@ main ul li {
 .imagens {
     width: 300px;
     margin: 10px 0px 10px 20px;
+}
+
+.float {
+    margin: 10px;
 }
 
 div.boxImages {
